dddrive went kotlin (v)